--- a/Client/views/checkout.hbs
+++ b/Client/views/checkout.hbs
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <h2>Xem hóa đơn</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="shop">Cửa hàng</a></li>
+                        <li class="breadcrumb-item"><a href="shop.html">Cửa hàng</a></li>
                         <li class="breadcrumb-item active">Xem hóa đơn</li>
                     </ul>
                 </div>
@@ -32,7 +32,7 @@
                                 <label for="InputPassword" class="mb-0">Mật khẩu</label>
                                 <input type="password" class="form-control" id="InputPassword" placeholder="Mật khẩu"> </div>
                         </div>
-                        <button type="submit" class="btn hvr-hover"><a href="login">Đăng nhập</a></button>
+                        <button type="submit" class="btn hvr-hover"><a href="login.html">Đăng nhập</a></button>
                     </form>
                 </div>
                 <div class="col-sm-6 col-lg-6 mb-3">
@@ -55,7 +55,7 @@
                                 <label for="InputPassword1" class="mb-0">Mật khẩu</label>
                                 <input type="password" class="form-control" id="InputPassword1" placeholder="Mật khẩu"> </div>
                         </div>
-                        <button type="submit" class="btn hvr-hover"><a href="register">Đăng kí</a></button>
+                        <button type="submit" class="btn hvr-hover"><a href="register.html">Đăng kí</a></button>
                     </form>
                 </div>
             </div>
@@ -268,7 +268,7 @@
                                 </div>
                                 <hr> </div>
                         </div>
-                        <div class="col-12 d-flex shopping-box"> <a href="checkout" class="ml-auto btn hvr-hover">Đặt hàng</a> </div>
+                        <div class="col-12 d-flex shopping-box"> <a href="checkout.html" class="ml-auto btn hvr-hover">Đặt hàng</a> </div>
                     </div>
                 </div>
             </div>
