--- a/Client/views/layout.hbs
+++ b/Client/views/layout.hbs
@@ -80,7 +80,7 @@
                     </div>
                     <div class="our-link">
                         <ul>
-                            <li><a href="my-account">Tài khoản</a></li>
+                            <li><a href="my-account.html">Tài khoản</a></li>
                             <li><a href="#">Công ty</a></li>
                             <li><a href="#">Liên hệ</a></li>
                         </ul>
@@ -101,15 +101,15 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index"><img src="images/logo.png" class="logo" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="nav-item active"><a class="nav-link" href="index">Trang chủ</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about">Giới thiệu</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="index.html">Trang chủ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">Giới thiệu</a></li>
                         <li class="dropdown megamenu-fw">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Sản phẩm</a>
                             <ul class="dropdown-menu megamenu-content" role="menu">
@@ -119,10 +119,10 @@
                                             <h6 class="title">Áo</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop">Áo khoát</a></li>
-                                                    <li><a href="shop">Sơ mi</a></li>
-                                                    <li><a href="shop">Áo len &amp; Áo đan tay</a></li>
-                                                    <li><a href="shop">Áo thun</a></li>
+                                                    <li><a href="shop.html">Áo khoát</a></li>
+                                                    <li><a href="shop.html">Sơ mi</a></li>
+                                                    <li><a href="shop.html">Áo len &amp; Áo đan tay</a></li>
+                                                    <li><a href="shop.html">Áo thun</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -131,10 +131,10 @@
                                             <h6 class="title">Quần</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop">Quần bơi</a></li>
-                                                    <li><a href="shop">Váy</a></li>
-                                                    <li><a href="shop">Jeans</a></li>
-                                                    <li><a href="shop">Quần tái chế</a></li>
+                                                    <li><a href="shop.html">Quần bơi</a></li>
+                                                    <li><a href="shop.html">Váy</a></li>
+                                                    <li><a href="shop.html">Jeans</a></li>
+                                                    <li><a href="shop.html">Quần tái chế</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -143,10 +143,10 @@
                                             <h6 class="title">Thời trang theo mùa</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop">Xuân</a></li>
-                                                    <li><a href="shop">Hạ</a></li>
-                                                    <li><a href="shop">Thu</a></li>
-                                                    <li><a href="shop">Đông</a></li>
+                                                    <li><a href="shop.html">Xuân</a></li>
+                                                    <li><a href="shop.html">Hạ</a></li>
+                                                    <li><a href="shop.html">Thu</a></li>
+                                                    <li><a href="shop.html">Đông</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -154,10 +154,10 @@
                                             <h6 class="title">Phụ kiện</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop">Túi xách</a></li>
-                                                    <li><a href="shop">Mắt kiếng</a></li>
-                                                    <li><a href="shop">Răng giả</a></li>
-                                                    <li><a href="shop">Ví da</a></li>
+                                                    <li><a href="shop.html">Túi xách</a></li>
+                                                    <li><a href="shop.html">Mắt kiếng</a></li>
+                                                    <li><a href="shop.html">Răng giả</a></li>
+                                                    <li><a href="shop.html">Ví da</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -170,15 +170,15 @@
                         <li class="dropdown">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Cửa hàng</a>
                             <ul class="dropdown-menu">
-                                <li><a href="cart">Giỏ hàng</a></li>
-                                <li><a href="checkout">Xem hóa đơn</a></li>
-                                <li><a href="my-account">Tài khoản</a></li>
-                                <li><a href="wishlist">Ghim</a></li>
-                                <li><a href="shop-detail">Sản phẩm chi tiết</a></li>
+                                <li><a href="cart.html">Giỏ hàng</a></li>
+                                <li><a href="checkout.html">Xem hóa đơn</a></li>
+                                <li><a href="my-account.html">Tài khoản</a></li>
+                                <li><a href="wishlist.html">Ghim</a></li>
+                                <li><a href="shop-detail.html">Sản phẩm chi tiết</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="service">Dịch vụ</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact-us">Liên hệ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="service.html">Dịch vụ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact-us.html">Liên hệ</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
