--- a/Client/views/my-account.hbs
+++ b/Client/views/my-account.hbs
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <h2>Tài khoản</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="shop">Cửa hàng</a></li>
+                        <li class="breadcrumb-item"><a href="shop.html">Cửa hàng</a></li>
                         <li class="breadcrumb-item active">Tài khoản</li>
                     </ul>
                 </div>
@@ -23,7 +23,7 @@
                         <div class="account-box">
                             <div class="service-box">
                                 <div class="service-icon">
-                                    <a href="orders-history"> <i class="fa fa-gift"></i> </a>
+                                    <a href="orders-history.html"> <i class="fa fa-gift"></i> </a>
                                 </div>
                                 <div class="service-desc">
                                     <h4>Xem giao dịch</h4>
@@ -36,7 +36,7 @@
                         <div class="account-box">
                             <div class="service-box">
                                 <div class="service-icon">
-                                    <a href="update-account"><i class="fa fa-lock"></i> </a>
+                                    <a href="update-account.html"><i class="fa fa-lock"></i> </a>
                                 </div>
                                 <div class="service-desc">
                                     <h4>Chỉnh sửa</h4>
@@ -49,7 +49,7 @@
                         <div class="account-box">
                             <div class="service-box">
                                 <div class="service-icon">
-                                    <a href="forget-password"> <i class="fa fa-location-arrow"></i> </a>
+                                    <a href="forget-password.html"> <i class="fa fa-location-arrow"></i> </a>
                                 </div>
                                 <div class="service-desc">
                                     <h4>Quên mật khẩu</h4>
