--- a/Client/views/shop-detail.hbs
+++ b/Client/views/shop-detail.hbs
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <h2>Chi tiết sản phẩm</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="shop">Cửa hàng</a></li>
+                        <li class="breadcrumb-item"><a href="shop.html">Cửa hàng</a></li>
                         <li class="breadcrumb-item active">Chi tiết sản phẩm</li>
                     </ul>
                 </div>
@@ -116,7 +116,7 @@
                                     <img src="images/img-pro-01.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                         <ul>
-                                            <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                            <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                         </ul>
@@ -135,7 +135,7 @@
                                     <img src="images/img-pro-02.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                         <ul>
-                                            <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                            <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                         </ul>
@@ -154,7 +154,7 @@
                                     <img src="images/img-pro-03.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                         <ul>
-                                            <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                            <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                         </ul>
@@ -173,7 +173,7 @@
                                     <img src="images/img-pro-04.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                         <ul>
-                                            <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                            <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                         </ul>
@@ -192,7 +192,7 @@
                                     <img src="images/img-pro-01.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                         <ul>
-                                            <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                            <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                         </ul>
@@ -211,7 +211,7 @@
                                     <img src="images/img-pro-02.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                         <ul>
-                                            <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                            <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                         </ul>
@@ -230,7 +230,7 @@
                                     <img src="images/img-pro-03.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                         <ul>
-                                            <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                            <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                         </ul>
@@ -249,7 +249,7 @@
                                     <img src="images/img-pro-04.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                         <ul>
-                                            <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                            <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                         </ul>
