--- a/Client/views/update-account.hbs
+++ b/Client/views/update-account.hbs
@@ -65,7 +65,7 @@
                             
  </div>  
  <div class="title-all text-center" style="margin-top:10px;">
-     <a class="btn hvr-hover"  href="update-accept" style="font-weight: bold; color: white">Lưu thay đổi</a>    
+     <a class="btn hvr-hover"  href="update-accept.html" style="font-weight: bold; color: white">Lưu thay đổi</a>    
 </div>
                      
                             
