--- a/Client/views/cart.hbs
+++ b/Client/views/cart.hbs
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <h2>Cart</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="shop">Cửa hàng</a></li>
+                        <li class="breadcrumb-item"><a href="shop.html">Cửa hàng</a></li>
                         <li class="breadcrumb-item active">Giỏ hàng</li>
                     </ul>
                 </div>
@@ -34,12 +34,12 @@
                             <tbody>
                                 <tr>
                                     <td class="thumbnail-img">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									<img class="img-fluid" src="images/img-pro-01.jpg" alt="" />
 								</a>
                                     </td>
                                     <td class="name-pr">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									Lorem ipsum dolor sit amet
 								</a>
                                     </td>
@@ -58,12 +58,12 @@
                                 </tr>
                                 <tr>
                                     <td class="thumbnail-img">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									<img class="img-fluid" src="images/img-pro-02.jpg" alt="" />
 								</a>
                                     </td>
                                     <td class="name-pr">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									Lorem ipsum dolor sit amet
 								</a>
                                     </td>
@@ -82,12 +82,12 @@
                                 </tr>
                                 <tr>
                                     <td class="thumbnail-img">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									<img class="img-fluid" src="images/img-pro-03.jpg" alt="" />
 								</a>
                                     </td>
                                     <td class="name-pr">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									Lorem ipsum dolor sit amet
 								</a>
                                     </td>
@@ -161,7 +161,7 @@
                         </div>
                         <hr> </div>
                 </div>
-                <div class="col-12 d-flex shopping-box"><a href="checkout" class="ml-auto btn hvr-hover">Đặt hàng</a> </div>
+                <div class="col-12 d-flex shopping-box"><a href="checkout.html" class="ml-auto btn hvr-hover">Đặt hàng</a> </div>
             </div>
 
         </div>
