--- a/Client/views/contact-us.hbs
+++ b/Client/views/contact-us.hbs
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <h2>Liên hệ</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index">Trang chủ</a></li>
+                        <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
                         <li class="breadcrumb-item active">Liên hệ </li>
                     </ul>
                 </div>
