--- a/Client/views/searchResult.hbs
+++ b/Client/views/searchResult.hbs
@@ -14,7 +14,7 @@
                                 <img src="images/img-pro-01.jpg" class="img-fluid" alt="Image">
                                 <div class="mask-icon">
                                     <ul>
-                                        <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                        <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                         <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                         <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                     </ul>
@@ -46,7 +46,7 @@
                                     <img src="images/img-pro-02.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                     <ul>
-                                        <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                        <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                         <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                         <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                     </ul>
@@ -78,7 +78,7 @@
                                     <img src="images/img-pro-03.jpg" class="img-fluid" alt="Image">
                                     <div class="mask-icon">
                                         <ul>
-                                            <li><a href="shop-detail" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
+                                            <li><a href="shop-detail.html" data-toggle="tooltip" data-placement="right" title="Xem"><i class="fas fa-eye"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="So sánh"><i class="fas fa-sync-alt"></i></a></li>
                                             <li><a href="#" data-toggle="tooltip" data-placement="right" title="Ghim"><i class="far fa-heart"></i></a></li>
                                         </ul>
