--- a/Client/views/service.hbs
+++ b/Client/views/service.hbs
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <h2>Dịch vụ</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index">Trang chủ</a></li>
+                        <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
                         <li class="breadcrumb-item active">Dịch vụ</li>
                     </ul>
                 </div>
