--- a/Client/views/wishlist.hbs
+++ b/Client/views/wishlist.hbs
@@ -5,7 +5,7 @@
                 <div class="col-lg-12">
                     <h2>Wishlist</h2>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="shop">Shop</a></li>
+                        <li class="breadcrumb-item"><a href="shop.html">Shop</a></li>
                         <li class="breadcrumb-item active">Wishlist</li>
                     </ul>
                 </div>
@@ -34,12 +34,12 @@
                             <tbody>
                                 <tr>
                                     <td class="thumbnail-img">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									<img class="img-fluid" src="images/img-pro-01.jpg" alt="" />
 								</a>
                                     </td>
                                     <td class="name-pr">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									Lorem ipsum dolor sit amet
 								</a>
                                     </td>
@@ -58,12 +58,12 @@
                                 </tr>
                                 <tr>
                                     <td class="thumbnail-img">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									<img class="img-fluid" src="images/img-pro-02.jpg" alt="" />
 								</a>
                                     </td>
                                     <td class="name-pr">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									Lorem ipsum dolor sit amet
 								</a>
                                     </td>
@@ -82,12 +82,12 @@
                                 </tr>
                                 <tr>
                                     <td class="thumbnail-img">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									<img class="img-fluid" src="images/img-pro-03.jpg" alt="" />
 								</a>
                                     </td>
                                     <td class="name-pr">
-                                        <a href="shop-detail">
+                                        <a href="shop-detail.html">
 									Lorem ipsum dolor sit amet
 								</a>
                                     </td>
